--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ medium: https://medium.com
 
 
 baseurl: / # if your site is located at /blog or /home, enter it here, otherwise leave it as '/'
-url: https://gilbertjanderson.com # the url of your site
+url: https://gilbertanderson.github.io # the url of your site
 medium: https://medium.com/@gilbertjanderson/
 github:  https://github.com/gilbertanderson
 
