Add Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ url: https://gilbertanderson.github.io # the url of your site
 medium: https://medium.com/@gilbertanderson
 github:  https://github.com/gilbertanderson
 
-google_analytics_tracking_id: UA-temp # This looks something like UA-000000000-0 Head over to https://analytics.google.com/ to setup.
+google_analytics_tracking_id: UA-130517979-1 # This looks something like UA-000000000-0 Head over to https://analytics.google.com/ to setup.
 
 cookies_banner: show # The value "show" will show the cookies banner, the value "none" will hide the banner.
 
