Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: Software Engineer & Project Manager
 
 display_footer: inital  # change this to 'none' if you want to hide the footer copyright text
 
-theme: jekyll-material-theme
+theme: jekyll-theme-cayman
 
 parallax_image_one: assets/images/startup3.jpg # These are the images used for the parallax background
 parallax_image_two: assets/images/startup3.jpg
