--- a/_config.yml
+++ b/_config.yml
@@ -34,22 +34,22 @@ project_one: Jekyll Material Theme
 project_one_description: A Jekyll Gem Theme based on Material Design using Materialize, currently being used on this site.
 project_one_url: https://github.com/jameshamann/jekyll-material-theme
 project_button: Github
-project_one_icon: web  # these are from materiailize css, the full collection is here: http://materializecss.com/icons.html
+project_one_icon: typewriter # these are from materiailize css, the full collection is here: http://materializecss.com/icons.html
 
 project_two: Dive Log
 project_two_description: Capstone Project - Asset tracker
 project_two_url: https://github.com/gilbertanderson/WOS_Dive_Log
-project_two_icon: web
+project_two_icon: startup
 
 project_three: ReactJS Test App
 project_three_description: App to show off features of ReactJS
 project_three_url: https://github.com/gilbertanderson/React-Test-App
-project_three_icon: location_on
+project_three_icon: laptop
 
 project_four: AngularJS Sample App
 project_four_description: An app that allows users to like and dislike books while also filtering through a list built using AngularJS.
 project_four_url: https://github.com/gilbertanderson/sample-angular-app
-project_four_icon: web
+project_four_icon: laptop_red
 
 # Skill icons from https://konpa.github.io/devicon/
 skills:
