--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,6 +1,6 @@
 s3_id: <%= ENV['S3_ID'] %>
 s3_secret: <%= ENV['S3_SECRET'] %>
-s3_bucket: jameshamann.com
+s3_bucket: 
 cloudfront_distribution_id: E3QF7R05YA3N4U
 # Below are examples of all the available configurations.
 # See README for more detailed info on each of them.
